# poc-further-interview

./: .env.example  .gitignore  RAILWAY_DEPLOYMENT.md  RAILWAY_FIX.md  RAILWAY_QUICKSTART.md  README.md  docker-compose.yml  railway.toml
admin/: Dockerfile  package-lock.json  package.json
admin/src/: App.jsx
admin/src/components/: ProspectDetail.jsx  ProspectsList.jsx
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/data/: acme_knowledge.json
backend/sales_agent/: apps.py  models.py  rag.py  urls.py  views.py
backend/sales_agent/agents/: workflow.py
backend/sales_agent/management/commands/: seed_knowledge.py
backend/sales_agent/migrations/: 0001_initial.py
docs/: project-status.md  req.md  tech-design.md
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  UnderstandingPanel.jsx
